tests/snapshots/examples_fixtures/module_scoped_type_classes__ClassMatchableEffects__App__Main.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 27
---
Fixture: examples/module_scoped_type_classes/ClassMatchableEffects/App/Main.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ClassMatchableEffects.App.Main` doesn't match file path `examples/module_scoped_type_classes/ClassMatchableEffects/App/Main.flx`.

  examples/module_scoped_type_classes/ClassMatchableEffects/App/Main.flx:4:1
  |
4 | module ClassMatchableEffects.App.Main {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
